--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
+title: Das Keyboard 5Q Extras Repo
+author: Daniel Lund
+email: your-email@domain.com
+description: > # this means to ignore newlines until "baseurl:"
+  This is a base site being set up for the long awaited 5Q. 
+  Please submit your email if you are interested in joining the slack channel
+  to collaborate and share ideas.  
+
 theme: jekyll-theme-slate
